--- a/locales/bookmark.en-US.properties
+++ b/locales/bookmark.en-US.properties
@@ -1,7 +1,12 @@
-add-to-home-screen=Add to Home Screen
-add-to-home-screen-header=Add link
+add-bookmark-header=Add link
+edit-bookmark-header=Edit link
+
 added-to-home-screen=Added to Home Screen
 updated-bookmark=Updated bookmark
+
 website-name=Website name
 address=Address
-cancel=Cancel
+
+cancel-action=Cancel
+add-action=Add to Home Screen
+done-action=Done
