Bug 988177 - Extract UI to remove bookmarks

--- a/locales/bookmark.en-US.properties
+++ b/locales/bookmark.en-US.properties
@@ -1,3 +1,4 @@
+# Add and update bookmark UIs
 add-bookmark-header=Add link
 edit-bookmark-header=Edit link
 
@@ -10,3 +11,10 @@ address=Address
 cancel-action=Cancel
 add-action=Add to Home Screen
 done-action=Done
+
+# Remove bookmark UI
+
+remove-title=Remove {{name}}
+remove-message=Remove {{name}} from system?
+cancel-action=Cancel
+remove-action=Remove
