Bug 928740 - Throw on missing strings during buildtime. r=gandalf r=@RickyChien f=flod f=sfoster f=kgrandon f=drs

--- a/locales/bookmark.en-US.properties
+++ b/locales/bookmark.en-US.properties
@@ -6,6 +6,7 @@ added-to-home-screen-message=Added to home screen
 updated-bookmark=Updated bookmark
 
 done-action=Done
+cancel-action=Cancel
 
 # Remove bookmark UI
 
